--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/translate": "^8.5.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "zxcvbn": "^4.4.2"
   }
 }
